@@ -1,0 +1,48 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:gravity="top|center"
+    android:id="@+id/layout_upload_image"
+    >
+
+    <TextView
+        android:id="@+id/image_filename"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_gravity="center"
+        android:layout_margin="10sp"
+        android:hint="...no image selected..."
+        />
+
+    <Button
+        android:id="@+id/choose_image_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="10sp"
+        android:text="Choose Image"
+        />
+
+    <EditText
+        android:id="@+id/image_upload_description"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
+        android:layout_margin="10sp"
+        android:hint="description"
+        />
+
+    <Button
+        android:id="@+id/upload_image"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="10sp"
+        android:text="Upload!"
+        />
+
+</LinearLayout>
